--- a/client/packages/base/reusableinput/ui/index.scss
+++ b/client/packages/base/reusableinput/ui/index.scss
@@ -19,7 +19,7 @@
 			background-color: transparent;
 			border: none;
 			padding-left: 0;
-			color: $color-grey;
+			color: $color-brown;
 
 			&:focus {
 				outline: none;
