--- a/client/packages/pages/menupage/ui/index.scss
+++ b/client/packages/pages/menupage/ui/index.scss
@@ -6,37 +6,9 @@
 
 	&__button {
 		margin-top: 2rem;
+		align-self: flex-end;
 	}
 }
-
-// .main {
-// 	padding: 1rem;
-// 	background-color: $color-light-beige;
-// 	display: flex;
-// 	flex-direction: column;
-// 	align-items: center;
-// 	gap: 1rem;
-// }
-
-// .product__wrapper {
-// 	display: flex;
-// 	flex-direction: column;
-// 	gap: 1rem;
-// 	width: 100%;
-// }
-
-// .product-top {
-// 	width: 100%;
-// 	display: flex;
-// 	justify-content: space-between;
-// }
-
-// .product-list {
-// 	width: 100%;
-// 	display: grid;
-// 	grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-// 	gap: 1rem;
-// }
 
 .filter__btn {
 	display: flex;
@@ -47,4 +19,12 @@
 
 .filter__icon {
 	font-size: 1.2rem;
+}
+
+@media screen and (max-width: 768px) {
+	.menu {
+		&__button {
+			align-self: auto;
+		}
+	}
 }
